emumaster (0.2.0) unstable; urgency=low

  * genesis/megadrive/megacd support
  * landscape support
  * bilinear filtering
  * better search
  * restart confirmation dialog to prevent accidental pushing on restart button
  * keyboard configured as PadA by default
  * do not clear screen if Fullscreen is forced
  * [bug] if games have different extensions they are incorrectly sorted in disk gallery - fixed
  * [bug] mulitplayer don't work in psx - fixed
  * [bug] strange sixaxis identify animation - fixed

 -- elemental <mar.kazmierczak@gmail.com>  Fri, 23 Dec 2011 11:44:11 +0100

emumaster (0.1.1) unstable; urgency=high

  * accelerometer calibration
  * keyboard configuration (gamepad mapping)
  * emulation can run in the background (global option)
  * 10 seconds bug fixed

 -- elemental <mar.kazmierczak@gmail.com>  Tue, 13 Dec 2011 08:39:17 +0100

emumaster (0.1.0) unstable; urgency=low

  * amiga emulation added
  * safety check for idle preventing battery drain
  * better error handling
  * display is not suspending while playing game
  * new look of the pad
  * configurable input devices
  * save/load error handling
  * global/local settings introduced
  * added search field
  * sixaxis support
  * completely redesigned UI
  * favourites category
  * workaround for sound bug (e.g. fix Mario Kart) - thanks to javispedro
  * added name filters based on disk extension
  * unified in-game menu
  * better scaler when selecting an icon for the home screen
  * information on few first runs
  * N900 build

 -- elemental <mar.kazmierczak@gmail.com>  Wed, 01 Sep 2011 10:02:09 +0200

emumaster (0.0.2) unstable; urgency=low

  * added gba emulation
  * added snes emulation
  * added psx <alpha> emulation
  * added page to select the console
  * user can select his own cover in disk gallery
  * states are compressed now
  * pad look redesigned (in-game exit button and L/R buttons added as well)
  * settings look refreshed
  * settings are saved now