@@ -21,7 +21,7 @@ PageStackWindow {
 	id: appWindow
 	initialPage: mainPage
 
-	style: PageStackWindowStyle {
+	platformStyle: PageStackWindowStyle {
 		id: customStyle;
 		background: "image://theme/meegotouch-video-background"
 		backgroundFillMode: Image.Stretch
